tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ChromiumTrioxide-AAAAAAAAAAAAAAAAAAAGqA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1704,
  "prerequisites": [
    1696
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Chromium Trioxide is made out of chrome and oxygen in two steps. First you make Chromium Dioxide and then Chromium Trioxide.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lChromium Trioxide",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    1696
  ],
  "rewards": [],
  "tasks": []
}
