tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ClassConcentrate-AAAAAAAAAAAAAAAAAAAJCw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2315,
  "prerequisites": [
    2312
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your Acidic Osmium solution is way too weak to precipitate out Osmium. Go and distill it in a DT to get a more concentrated variant of it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lClass, Concentrate!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2312
  ],
  "rewards": [],
  "tasks": []
}
