tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__CompoundingWithO-AAAAAAAAAAAAAAAAAAAL-w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3067,
  "prerequisites": [
    3068
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combining your cerium chloride with oxalic acid yields you cerium oxalate. This can then be heated (in your EBF(s), of course) to get §oanother §rcerium oxide.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lCompounding With Oxalic Acid",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3068
  ],
  "rewards": [],
  "tasks": []
}
