tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__CoolitBackDown-AAAAAAAAAAAAAAAAAAALRA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2884,
  "prerequisites": [
    2883
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You just need to run your Ruthenium Tetroxide through a fluid solidifier in this step to, well, solidify it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lCool it Back Down",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2883
  ],
  "rewards": [],
  "tasks": []
}
